<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pr"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addMeal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="@drawable/button_style1"
        android:padding="15dp"
        android:text="@string/add_meal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red_44"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchIngredient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_style1"
        android:text="@string/search_by_ingredient"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColor="@color/red_44"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMeal" />

    <Button
        android:id="@+id/searchMeal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_style1"
        android:text="@string/search_meal"
        android:padding="15dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red_44"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchIngredient"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/searchMealName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_style1"
        android:padding="15dp"
        android:text="@string/search_by_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red_44"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchMeal"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>