<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/gray"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </LinearLayout>

        <EditText
            android:id="@+id/searchIngredientText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/red_44"
            android:inputType="textPersonName"
            android:hint="@string/search_ingredient"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">
            <Button
                android:id="@+id/retrieveMealBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_meal"
                android:background="@drawable/button_style1"
                android:padding="15dp"
                android:textColor="@color/red_44"
                android:textStyle="bold|italic"
                android:layout_marginEnd="30dp"
                />
            <Button
                android:id="@+id/saveMealBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style1"
                android:padding="15dp"
                android:textColor="@color/red_44"
                android:textStyle="bold|italic"
                android:text="@string/save_meal"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
    </LinearLayout>

</ScrollView>